# IBH

./: .env.example  .gitignore  .gitleaks.toml  .prettierrc  CLAUDE.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.local.json
.claude/commands/: decision.md  plan.md  progress.md  session-end.md  session-start.md  task.md  verify.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-diagnose.yml  bootstrap-vps.yml  ci.yml  codeql.yml  codescan.yml  db-diagnose.yml  defender-for-devops.yml  demo-seed.yml  dependabot-automerge.yml  deploy-vps.yml  license-seed.yml  mobile-release.yml  pos-release.yml  repair-migration.yml  security-bridge.yml  security-close-hook.yml  security-scan.yml  security-sweep.yml  update-readme.yml  vps-discover.yml  vps-disk-cleanup.yml  vps-disk-setup.yml
apps/ai-brain/: Dockerfile  README.md  pyproject.toml
apps/ai-brain/src/: anomaly.py  forecast.py  main.py
apps/ai-brain/tests/: test_endpoints.py
apps/api/: Dockerfile  package.json  prisma.config.ts  tsconfig.json
apps/license-server/: Dockerfile  README.md  package.json  tsconfig.json
apps/mobile/: App.tsx  README.md  app.json  (+3 more)
apps/pos/src-tauri/: Cargo.toml  tauri.conf.json
apps/pos/src-tauri/src/: db.rs  fingerprint.rs  license.rs  main.rs
governance/: ACCEPTANCE_TESTS.md  ACCURACY_MAP.md  ACTIVE_SESSION_LOCKS.md  ARCHITECTURE.md  CUSTOMER_ONBOARDING.md  DECISIONS_LOG.md  DOMAIN_DICTIONARY.md  DR_RUNBOOK.md  MASTER_SCOPE.md  MODULE_STATUS_BOARD.md  OPEN_ISSUES.md  OWNER_ACTION_PHASES.md  PHASE1_OPERATIONS_GUIDE.md  PHASE4_PRE_UAT_READY.md  PHASES_3_5_ROADMAP.md  PLANS_MATRIX.md  PRODUCTION_VERIFY.md  SECURITY_AUDIT_2026-04-30.md  SESSION_HANDOFF.md  SESSION_PROTOCOL.md  T70_BILLING_CRON_RCA.md  TASK_QUEUE.md  UAT_PLAYBOOK.md
infra/: .env.production.example  DEPLOY.md  SECURITY.md  docker-compose.bootstrap.yml  docker-compose.dev.yml  docker-compose.vps-override.yml  docker-compose.vps.yml
scripts/: check-migration-prefixes.sh  close-security-issue.sh  collect-evidence.sh  diagnose-ci.sh  health-check.sh  next-task.sh  open-ci-issue.sh  operational-audit-prod.sh  smoke-test-prod.sh  smoke-tests.sh  sync-security-issues.sh  update-readme.sh  update-security-digest.sh  verify-session.sh
(+841 files in other folders)
