[project]
name = "al-ruya-ai-brain"
version = "0.1.0"
description = "Al-Ruya ERP — Tier 2/3 AI service (forecasting, anomaly detection, NLP query)"
requires-python = ">=3.11"
authors = [{ name = "Al-Ruya Arabic Vision Co." }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pyod>=2.0",
  "prophet>=1.1",
  "pandas>=2.2",
  "numpy>=1.26",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
qwen = [
  "ollama>=0.3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
