[package]
name = "al-ruya-pos"
version = "1.0.0"
edition = "2021"
authors = ["Al-Ruya Arabic Vision Co."]
license = "Proprietary"
description = "Al-Ruya ERP POS Desktop — offline-first"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tauri         = { version = "2", features = [] }
# SQLCipher-encrypted SQLite via rusqlite. The bundled-sqlcipher-vendored-openssl
# feature compiles SQLCipher (and OpenSSL) from source so the bundle is
# self-contained — no system libcrypto needed on end-user Windows machines.
# DB key is derived per-device from hardware fingerprint at first connect.
rusqlite              = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
tauri-plugin-store    = "2"
tauri-plugin-shell    = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-notification = "2"
tokio         = { version = "1", features = ["full"] }
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ulid          = "1"
chrono        = { version = "0.4", features = ["serde"] }
thiserror     = "1"
tracing       = "0.1"
tracing-subscriber = "0.3"
sha2          = "0.10"
sysinfo       = "0.30"
# T66 — offline RS256 license verification (defense in depth)
rsa           = { version = "0.9", features = ["sha2"] }
base64        = "0.22"
dirs          = "5"

[features]
# Required for Tauri v2
custom-protocol = ["tauri/custom-protocol"]
